added the files that i want to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ bin-release/
 
 # Other files and folders
 .settings/
+node_modules/
+.idea/
+package-lock.json/
+composer.json
+composer.lock
+vendor/
+.gitignore
+tsconfig.json
+package.json
+.parcel-cache
 
 # Executables
 *.swf
